creacion del archivo docs

--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build",
+    "build": "",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+
+    "build:href": "ng build --base-href ./",
+    "delete:docs": "del docs",
+    "copy:dist": "copyfiles dist/nft-preview-card/* ./docs -f",
+    "copy:dist:assets": "copyfiles dist/nft-preview-card/assets/* ./docs/assets/ -f",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist && npm run copy:dist:assets"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +34,8 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.16",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^5.1.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
